--- a/corpus/32.apkMod/assets/www/index.html
+++ b/corpus/32.apkMod/assets/www/index.html
@@ -52,6 +52,7 @@
         function onBodyLoad()
         {
             document.addEventListener("deviceready",onDeviceReady,false);
+            console.log(window.performance.timing.loadEventStart-window.performance.timing.navigationStart);
         }
         
         /* When this function is called, PhoneGap has been initialized and is ready to roll */
