--- a/corpus/com.iChemLabs.ChemDoodleMobile.apk+mod/assets/www/index.html
+++ b/corpus/com.iChemLabs.ChemDoodleMobile.apk+mod/assets/www/index.html
@@ -31,7 +31,7 @@
 	}	 
 </script>
 </head>
-<body onload="onBodyLoad()">
+<body onload="onBodyLoad(); console.log(window.performance.timing.loadEventStart-window.performance.timing.navigationStart)" >
 <script>
 	ChemDoodleMobile.ui.write();
 </script>
