--- a/corpus/AncientWondersMod/assets/www/index.html
+++ b/corpus/AncientWondersMod/assets/www/index.html
@@ -5,6 +5,81 @@
 <title>7 Ancient Wonders of the World</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link href="css/styles.css" rel="stylesheet" type="text/css">
+<style>
+@charset "UTF-8";
+.portrait h1 {
+}
+.landscape h1 {
+}
+body {
+	background: #000;
+}
+.logo {
+	padding: 10px;
+	text-align: center;
+}
+#map div[data-role="content"] {
+	position: absolute;
+	top: 42px;
+	bottom: 42px;
+	left: 0;
+	right: 0;
+}
+
+#gMap {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+.thumbnail {
+	float: right;
+	display: block;
+	margin: 5px 0 15px 5px;
+	border: 2px #fff solid;
+	padding: 2px;
+}
+.clearboth {
+	clear: both;
+}
+.addr {
+	overflow: hidden;
+	position:relative;
+}
+h2 {
+	margin-top: 0;
+}
+.details {
+	display: block;
+	margin: 10px 0;
+}
+div[data-role="controlgroup"] {
+	clear:both;
+	text-align: center;
+}
+div[data-role="content"] {
+	padding-bottom: 40px;
+}
+#loading {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background-color:rgba(0,0,0,.9);
+	z-index:9999;
+}
+.errorMsg {
+	position: absolute;
+	top: 0;
+	left: 10px;
+	z-index:9999;
+	padding: 5px;
+	background-color: rgba(0,0,0,.7);
+	display: none;
+}
+</style>
 <link rel="stylesheet" href="js/jquery.mobile-1.0a2.min.css" />
 <script src="js/jquery-1.4.4.min.js"></script>
 <script src="js/jquery.mobile-1.0a2.min.js"></script>
