--- a/corpus/br.com.rommel.point.apk+mod/assets/www/index.html
+++ b/corpus/br.com.rommel.point.apk+mod/assets/www/index.html
@@ -6,10 +6,62 @@
     <title>Point</title>
       <link rel="stylesheet" href="jquery.mobile/jquery.mobile-1.0.1.min.css" type="text/css"/>
 	  <link rel="stylesheet" href="pgandjqm-style-override.css" type="text/css"/>
+	  <style>
+	  .ui-header .ui-title {
+	margin-right:20px;
+	margin-left:20px;
+}
+
+.ui-footer .ui-title {
+	margin-right:20px;
+	margin-left:20px;
+	white-space:normal; 
+ }
+ 
+.ui-content { 
+	padding-top: 5px; 
+	padding-bottom: 5px;
+} 
+.texto{
+	font-family:Arial;
+	font-size:12px;
+}
+
+.tweet{
+	display: block;
+	/*padding: .4em;*/
+	/*margin: .4em 0;*/
+}
+.tweet-left{
+	float: left;
+	margin-right: 1em;
+}
+.tweet-left img{
+	border: 0px solid #000000;
+}
+.tweet-right{
+	/*float: right;*/
+	text-align: right;
+	margin-left: 1em;
+	padding-top:5px;
+}
+.tweet p.text{
+	margin: 0;
+	padding: 0;
+	font-family: Arial;
+	font-size: 12px;
+}
+.tweetDate{
+	font-family: Arial;
+	font-size: 10px;
+	color: #969696;
+}
+	  #page-map, #map-content, #map_canvas { width: 100%; height: 100%; padding: 0; }
+	  #map_canvas { min-height: 100%; }
+	  </style>
 	  <link rel="stylesheet" href="mapapp.css" type="text/css">
+
 	  
-	  <script type="text/javascript" charset="utf-8" src="jquery.mobile/jquery-1.7.1.min"></script>
-	  <script type="text/javascript" charset="utf-8" src="phonegap-1.4.1.js"></script>
 	  <script type="text/javascript">
         $(document).bind("mobileinit", function(){
             $.extend($.mobile, {
@@ -19,8 +71,7 @@
             $.mobile.allowCrossDomainPages = true;
         });
       </script>
-	  <script type="text/javascript" charset="utf-8" src="jquery.mobile/jquery.mobile-1.0.1.min.js"></script>
-      <script type="text/javascript" charset="iso-8859-1" src="main.js"></script>
+	 
 
 
 	</head>
@@ -38,5 +89,9 @@
 	</p>
 	</div>
     </div>
+	<script type="text/javascript" charset="utf-8" src="jquery.mobile/jquery-1.7.1.min"></script>
+	  <script type="text/javascript" charset="utf-8" src="phonegap-1.4.1.js"></script>
+	   <script type="text/javascript" charset="utf-8" src="jquery.mobile/jquery.mobile-1.0.1.min.js"></script>
+      <script type="text/javascript" charset="iso-8859-1" src="main.js"></script>
   </body>
 </html>
