--- a/corpus/com.iChemLabs.ChemDoodleMobile.apk+mod/assets/www/index.html
+++ b/corpus/com.iChemLabs.ChemDoodleMobile.apk+mod/assets/www/index.html
@@ -9,14 +9,17 @@
 <title>ChemDoodle Mobile</title>
 
 <link rel="stylesheet" href="css/jquery.mobile-1.3.0.min.css" />
-<link rel="stylesheet" href="css/ChemDoodleWeb.css" type="text/css" />
+<style>
+canvas.ChemDoodleWebComponent {
+	border: none;
+}
+</style>
 <script type="text/javascript" src="lib/ChemDoodleWeb-libs.js"></script>
 <script type="text/javascript" src="lib/ChemDoodleWeb.js"></script>
-<script type="text/javascript" src="lib/ChemDoodleWeb-sketcher.js"></script>
 <script type="text/javascript" src="lib/jquery.mobile-1.3.0.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="cordova-2.5.0.js"></script>
 <script type="text/javascript" src="lib/ChemDoodleMobile.js"></script>
-<script type="text/javascript" charset="utf-8" src="lib/childbrowser.js"></script>
+
 <script type="text/javascript" charset="utf-8">
 	function onBodyLoad() {
 		ChemDoodle.iChemLabs.SERVER_URL = 'http://mobile.cloud.chemdoodle.com/icl_cdc_v050001/WebHQ';
@@ -35,5 +38,7 @@
 <script>
 	ChemDoodleMobile.ui.write();
 </script>
+<script type="text/javascript" src="lib/ChemDoodleWeb-sketcher.js"></script>
+<script type="text/javascript" charset="utf-8" src="lib/childbrowser.js"></script>
 </body>
 </html>
